Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
       margin-top: 10px;
       font-size: 13px;
       opacity: .7;
+      text-decoration: none;
+      color: transparent;
+    }
+
+    .hint:hover {
+      color: black;
     }
 
     .result {
@@ -300,6 +306,7 @@
   </script>
 </body>
 </html>
+
 
 
 
